pkgs/drbd9/drbd/.compat_test.6.1.26/have_blk_qc_t_submit_bio.stderr
<command-line>: warning: "KBUILD_MODNAME" redefined
<command-line>: note: this is the location of the previous definition
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_blk_qc_t_submit_bio.c: In function ‘foo’:
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_blk_qc_t_submit_bio.c:9:25: error: assignment to ‘void (*)(struct bio *)’ from incompatible pointer type ‘blk_qc_t (*)(struct bio *)’ {aka ‘unsigned int (*)(struct bio *)’} [-Werror=incompatible-pointer-types]
    9 |         ops->submit_bio = submit;
      |                         ^
cc1: some warnings being treated as errors
